# homework_bank_transactions

./: README.md  pyproject.toml
src/: csv_dict.py  decorators.py  external_api.py  generators.py  main.py  masks.py  new_func_transactions.py  operation_counter.py  processing.py  right_format.py  search.py  utils.py  widget.py  xlsx_dict.py
tests/: conftest.py  test_deacorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py  tests_utils.py
