[tool.poetry]
name = "homework-9-1-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "homework_9"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
mock = "^5.1.0"
transaction = "^4.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
